<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/submit_info_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"/>
        <TextView
            android:id="@+id/subway_info"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/subway_info_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_info_update"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/submit_info_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_info_update"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"/>
        <TextView
            android:id="@+id/subway_info_current"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/subway_info_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_info_get"/>
    </LinearLayout>

</RelativeLayout>